--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cursovay",
   "private": true,
   "version": "0.0.0",
+  "homepage": ".",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -17,6 +18,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.32.1",
+    "react-hot-toast": "^2.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "redux-persist": "^6.0.0",
